# claude-skills

./: README.md
.claude-plugin/: marketplace.json
skills/cortex/: SKILL.md
skills/cortex/.claude-plugin/: marketplace.json
skills/cortex/scripts/: .gitignore  config.example.json
skills/fitness-tracker/: SKILL.md
skills/fitness-tracker/.claude-plugin/: marketplace.json
skills/fitness-tracker/reference/: exercises.md  sample-workouts-2026-01.md  workouts.csv
skills/fitness-tracker/scripts/: config.example.json  config.json  github_sync.py  parse_workout.py
skills/observable-plot/: SKILL.md  TABLE_OF_CONTENTS.md  examples.md
skills/observable-plot/.claude-plugin/: marketplace.json
skills/observable-plot/reference/: common-patterns.md  datasets.md  faceting.md  geographic.md  interactions.md  marks.md  plot-options.md  projections.md  scales.md  transforms.md
skills/observable-plot/scripts/: .gitignore  README.md  index.html  pyproject.toml
skills/observable-plot/scripts/plot_viewer/: __init__.py  server.py
skills/whatsapp-flows/: .manifest.json  IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  examples.md  skill.md
skills/whatsapp-flows/.claude-plugin/: marketplace.json
skills/whatsapp-flows/examples/: 01-simple-form.json  02-conditional-flow.json  03-product-selection.json
skills/whatsapp-flows/reference/: 01-core-structure.md  02-data-model.md  03-text-components.md  04-input-components.md  05-selection-components.md  06-date-time-components.md  07-media-components.md  08-rich-content.md  13-actions.md  (+20 more)
skills/xlsform/: SKILL.md  examples.md
(+39 files in other folders)
